Figs inserted to the document

--- a/vakulya-ais2021-ga.tex
+++ b/vakulya-ais2021-ga.tex
@@ -86,7 +86,29 @@ with predefined resolution and color depth are supported.
 
 \begin{figure}[htbp]
 	\centering
+	\includegraphics[width=0.35\textwidth]{fig/sherlock6.png}
+	\caption{The selected test image}
+	\label{sherlock-6}
+\end{figure}
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.35\textwidth]{fig/cat6.png}
+	\caption{The selected test image}
+	\label{cat-6}
+\end{figure}
+
+
+\begin{figure}[htbp]
+	\centering
 		\resizebox{.45\textwidth}{!}{\input{fig.tex}}
+	\caption{20 polygons}
+	\label{foo}
+\end{figure}
+
+\begin{figure}[htbp]
+	\centering
+		\resizebox{.45\textwidth}{!}{\input{fig_cat.tex}}
 	\caption{TODO}
 	\label{foo}
 \end{figure}
@@ -99,7 +121,12 @@ with predefined resolution and color depth are supported.
 
 \bibitem{b1}Sivanandam, S. N. and Deepa, S. N., ``Introduction to Genetic Algorithms'',
 	Springer-Verlag Berlin Heidelberg, 2008, ISBN 978-3-540-73189-4
-	%
+	
+
+\bibitem{b2}Baldominos A., Saez Y., Recio G., Calle J. ``Learning Levels of Mario AI Using Genetic Algorithms``,
+	In: Advances in Artificial Intelligence. CAEPIA 2015. Lecture Notes in Computer Science, vol 9422. Springer, Cham. doi: 10.1007/978-3-319-24598-0\_24
+
+
 %\bibitem{b2}ISO 516:2019. Camera shutters — Timing — General definition and
 %	mechanical shutter measurements. International Organization for Standardization,
 %	2019. Online: https://www.iso.org/obp/ui/\#iso:std:iso:516:ed-4:v1:en
