New figures, more text

--- a/fig.tex
+++ b/fig.tex
@@ -83,55 +83,53 @@
 \begin{picture}(6800.00,5100.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%%
-      \put(392,426){\makebox(0,0)[r]{\strut{}$0$}}%
+      \put(605,681){\makebox(0,0)[r]{\strut{}$0$}}%
       \csname LTb\endcsname%%
-      \put(392,1314){\makebox(0,0)[r]{\strut{}$5$}}%
+      \put(605,1727){\makebox(0,0)[r]{\strut{}$5$}}%
       \csname LTb\endcsname%%
-      \put(392,2202){\makebox(0,0)[r]{\strut{}$10$}}%
+      \put(605,2774){\makebox(0,0)[r]{\strut{}$10$}}%
       \csname LTb\endcsname%%
-      \put(392,3090){\makebox(0,0)[r]{\strut{}$15$}}%
+      \put(605,3820){\makebox(0,0)[r]{\strut{}$15$}}%
       \csname LTb\endcsname%%
-      \put(392,3978){\makebox(0,0)[r]{\strut{}$20$}}%
+      \put(605,4866){\makebox(0,0)[r]{\strut{}$20$}}%
       \csname LTb\endcsname%%
-      \put(392,4866){\makebox(0,0)[r]{\strut{}$25$}}%
+      \put(717,468){\makebox(0,0){\strut{}$0$}}%
       \csname LTb\endcsname%%
-      \put(504,213){\makebox(0,0){\strut{}$0$}}%
+      \put(1862,468){\makebox(0,0){\strut{}$100$}}%
       \csname LTb\endcsname%%
-      \put(1098,213){\makebox(0,0){\strut{}$100$}}%
+      \put(3007,468){\makebox(0,0){\strut{}$200$}}%
       \csname LTb\endcsname%%
-      \put(1692,213){\makebox(0,0){\strut{}$200$}}%
+      \put(4153,468){\makebox(0,0){\strut{}$300$}}%
       \csname LTb\endcsname%%
-      \put(2286,213){\makebox(0,0){\strut{}$300$}}%
+      \put(5298,468){\makebox(0,0){\strut{}$400$}}%
       \csname LTb\endcsname%%
-      \put(2880,213){\makebox(0,0){\strut{}$400$}}%
-      \csname LTb\endcsname%%
-      \put(3474,213){\makebox(0,0){\strut{}$500$}}%
-      \csname LTb\endcsname%%
-      \put(4067,213){\makebox(0,0){\strut{}$600$}}%
-      \csname LTb\endcsname%%
-      \put(4661,213){\makebox(0,0){\strut{}$700$}}%
-      \csname LTb\endcsname%%
-      \put(5255,213){\makebox(0,0){\strut{}$800$}}%
-      \csname LTb\endcsname%%
-      \put(5849,213){\makebox(0,0){\strut{}$900$}}%
-      \csname LTb\endcsname%%
-      \put(6443,213){\makebox(0,0){\strut{}$1000$}}%
+      \put(6443,468){\makebox(0,0){\strut{}$500$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
-      \put(5574,4674){\makebox(0,0)[r]{\strut{}60}}%
+      \put(191,2773){\rotatebox{-270}{\makebox(0,0){\strut{}Error (\%)}}}%
       \csname LTb\endcsname%%
-      \put(5574,4461){\makebox(0,0)[r]{\strut{}80}}%
+      \put(3580,149){\makebox(0,0){\strut{}Generation}}%
       \csname LTb\endcsname%%
-      \put(5574,4248){\makebox(0,0)[r]{\strut{}40}}%
+      \put(5574,4674){\makebox(0,0)[r]{\strut{}$k_{max}=5$}}%
       \csname LTb\endcsname%%
-      \put(5574,4035){\makebox(0,0)[r]{\strut{}30}}%
+      \put(5574,4461){\makebox(0,0)[r]{\strut{}$k_{max}=10$}}%
       \csname LTb\endcsname%%
-      \put(5574,3822){\makebox(0,0)[r]{\strut{}20}}%
+      \put(5574,4248){\makebox(0,0)[r]{\strut{}$k_{max}=15$}}%
       \csname LTb\endcsname%%
-      \put(5574,3609){\makebox(0,0)[r]{\strut{}25}}%
+      \put(5574,4035){\makebox(0,0)[r]{\strut{}$k_{max}=20$}}%
       \csname LTb\endcsname%%
-      \put(5574,3396){\makebox(0,0)[r]{\strut{}15}}%
+      \put(5574,3822){\makebox(0,0)[r]{\strut{}$k_{max}=25$}}%
+      \csname LTb\endcsname%%
+      \put(5574,3609){\makebox(0,0)[r]{\strut{}$k_{max}=30$}}%
+      \csname LTb\endcsname%%
+      \put(5574,3396){\makebox(0,0)[r]{\strut{}$k_{max}=40$}}%
+      \csname LTb\endcsname%%
+      \put(5574,3183){\makebox(0,0)[r]{\strut{}$k_{max}=50$}}%
+      \csname LTb\endcsname%%
+      \put(5574,2970){\makebox(0,0)[r]{\strut{}$k_{max}=60$}}%
+      \csname LTb\endcsname%%
+      \put(5574,2757){\makebox(0,0)[r]{\strut{}$k_{max}=70$}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics[width={340.00bp},height={255.00bp}]{fig}}%
